# time-series-database

./: CMakeLists.txt  README.md  async_with_future.cpp  number_of_threads.cpp
src/api/: main.cpp
src/core/backup/: CMakeLists.txt
src/core/backup/include/: data_backup.hpp
src/core/backup/include/aws/: aws_crud_handler.hpp  aws_data_backup.hpp  aws_metadata_handler.hpp
src/core/backup/src/aws/: aws_crud_handler.cpp  aws_data_backup.cpp  aws_metadata_handler.cpp
src/core/database/: CMakeLists.txt
src/core/database/include/: DataRepository.hpp  data_indexer.hpp  data_repository.hpp  horizontal_data_indexer.hpp  rocksdb_data_repository.hpp
src/core/database/src/: horizontal_data_indexer.cpp  rocksdb_data_repository.cpp
src/core/observer/: CMakeLists.txt
src/core/observer/include/: observable.hpp  observer.hpp
src/test/: CMakeLists.txt
src/test/core/backup/aws/: aws_crud_handler_test.cpp  aws_data_backup_test.cpp  aws_metadata_handler_test.cpp
src/test/core/database/: horizontal_data_indexer.cpp  horizontal_data_indexer_test.cpp  rocksdb_data_repository_test.cpp
src/test/core/observer/: observer_test.cpp
src/test/json/: json_data_builder_test.cpp  json_parser_test.cpp
src/test/utils/json/: json_data_builder_test.cpp  json_parser_test.cpp  simple_json_parser_test.cpp
src/test/utils/logs/: logger_test.cpp
src/test/utils/query/: query_parser_value_test.cpp  simple_query_parser_test.cpp
src/utils/: CMakeLists.txt
src/utils/include/: constants.hpp
src/utils/include/json/: json_data_builder.hpp  json_parser.hpp  simple_json_parser.hpp
src/utils/include/logs/: logger.hpp
src/utils/include/query/: query_parser.hpp  query_parser_params.hpp  query_parser_value.hpp  simple_query_parser.hpp
src/utils/src/json/: json_data_builder.cpp  json_parser.cpp  simple_json_parser.cpp
src/utils/src/logs/: logger.cpp
src/utils/src/query/: query_parser_value.cpp  simple_query_parser.cpp
ssl-hash-code-test/: main.cpp
testing-grpc/: CMakeLists.txt  RouteGuide.proto
testing-grpc/.cache/clangd/index/: hello.grpc.pb.cc.F1A89B420C11053B.idx  hello.pb.cc.0179DB2460814425.idx  server.cpp.A345D7DC4841B7BC.idx
testing-grpc/proto/: hello.proto
testing-grpc/src/: server.cpp
testing-in-cpp/: CMakeLists.txt  my_code.cpp  my_code.h
testing-in-cpp/test/: CMakeLists.txt  my_code_test.cpp
testing-rockdb/: test_rockdb.cpp
